Troubleshooting for the Eclipse plugin